--- a/hiera/users/mrolli.yaml
+++ b/hiera/users/mrolli.yaml
@@ -1,9 +1,14 @@
 ---
 boxen::personal::homebrew_packages:
-  - pstree
+  - ack
+  - findutils
+  - gnu-tar
   - htop
+  - pstree
+  - tmux
 
 boxen::personal::osx_apps:
+  - alfred
   - google-chrome
   - spotify
 
